--- a/demo.html
+++ b/demo.html
@@ -5,7 +5,7 @@
     <title>Démo DOMension</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r128/three.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.12.2/gsap.min.js"></script>
-    <script src="https://ajkula.github.io/DOMension/domension.min.js"></script>
+    <script src="domension.min.js"></script>
     <style>
         body, html {
             margin: 0;
